<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ufrpe.bccsurvivor.RankingActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/tv_Ranking"
        android:textAppearance="@android:style/TextAppearance.WindowTitle"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/tv_Jogador"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="end"
            android:text="@string/tv_Pontos"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"></ListView>

</LinearLayout>
