<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        tools:ignore="ContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/login" />

    <Button
        android:id="@+id/button8"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/btlsenha"
        android:text="@string/btLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="224dp"
        android:layout_marginBottom="69dp"
        android:layout_marginTop="260dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tv_nome"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/LNome"/>

        <EditText
            android:id="@+id/tv_senha"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/LSenha"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>